# Yellowstone

./: .gitignore  ALGORITHMS_MODULE_SUMMARY.md  AZURE_SENTINEL_INTEGRATION.md  BENCHMARKING_SUITE_SUMMARY.md  CHECKPOINT.md  CLAUDE_SDK_IMPLEMENTATION.md  CLI_IMPLEMENTATION_SUMMARY.md  CLI_QUICK_START.md  CLI_README.md  CLI_REFERENCE.md  CODE_REVIEW_EXECUTIVE_SUMMARY.md  CONTINUATION_PROMPT.md  CURRENT_ARCHITECTURE.md  CURRENT_STATE.md  CYPHER_KQL_TRANSLATION_ANALYSIS.md  CYPHER_SENTINEL_FEASIBILITY_ANALYSIS_V2.md  DELIVERABLES.md  FILES_TO_MODIFY.md  FINAL_SUMMARY.md  HONEST_CODE_REVIEW.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  KQL_NATIVE_GRAPH_ARCHITECTURE_REVOLUTION.md  MISSION_COMPLETE.md  MONITORING_IMPLEMENTATION.md  PARSER_MODULE_SUMMARY.md  PHASE2_COMPLETION.md  PROJECT_COMPLETE_SUMMARY.md  PROJECT_STATUS.md  README.md  SENTINEL_IMPLEMENTATION_COMPLETE.md  TECHNICAL_DEBT_INVENTORY.md  TRANSLATOR_MODULE_SUMMARY.md  VALIDATION_RESULTS.md  architecture_recommendations.md  benchmark_report_demo.html  benchmark_report_demo.json  performance_analysis.md  (+3 more)
.github/: issue_phase1.md  issue_phase2.md  issue_phase3.md  issue_phase4.md  story_direct_translation.md  story_parser.md
agentic_translation_api/: DESIGN_SUMMARY.md  INDEX.md  architecture.md  example_usage.py  integration_patterns.md  openapi.yaml
deployment/: .env.example  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  INDEX.md  README.md  VERIFICATION_CHECKLIST.md  docker-compose.yml  prometheus.yml
docs/: README.md  (+4 more)
(+161 files in other folders)
