[project]
name = "yellowstone"
version = "0.1.0"
description = "Cypher Query Engine for Microsoft Sentinel Graph"
authors = [{name = "Ryan Sweet", email = "ryan@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "antlr4-python3-runtime>=4.13.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.25.0",
    "azure-identity>=1.15.0",
    "azure-monitor-query>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "ipython>=8.18.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/yellowstone --cov-report=html --cov-report=term"
